<resources>
    <string name="app_name">HRlogin</string>
    <string name="hrm_title">HRM</string>
    <string name="hrm">HRM</string>
    <string name="pt_xyz_indonesia">PT XYZ indonesia</string>
    <string name="input_username">input username</string>
    <string name="username">username</string>
    <string name="input_password">input password</string>
    <string name="verivy_id">verivy id</string>
    <string name="login">login</string>
    <string name="claim_gaji">Claim gaji</string>
    <string name="logout">Logout</string>
    <string name="view_presensi">View Presensi</string>
    <string name="view_gaji">View Gaji</string>
    <string name="nip_pegawai">nip</string>
    <string name="denda">denda</string>
    <string name="lembur">lembur</string>
    <string name="button">Button</string>
    <string name="presensi">presensi</string>
    <string name="bayar_gaji">bayar gaji</string>
    <string name="input_nip">input nip</string>
    <string name="nip">nip</string>
    <string name="input_no_req">input no req</string>
    <string name="bayar">bayar</string>
    <string name="claim">claim</string>
    <string name="input_no_rekening">input no rekening</string>
    <string name="no_rekening">no rekening</string>
    <string name="input_gaji">input gaji</string>
    <string name="input_jumlah_denda">input jumlah denda</string>
    <string name="jumlah">jumlah</string>
    <string name="input_tipe_denda">input tipe denda</string>
    <string name="tipe_denda">tipe-denda</string>
    <string name="input_kode_denda">input kode denda</string>
    <string name="kode_denda">kode denda</string>
    <string name="input_nama_task_lembur">input nama task lembur</string>
    <string name="tipe_lembur">tipe-lembur</string>
    <string name="input_kode_task_lembur">input kode task lembur</string>
    <string name="kode_lembur">kode lembur</string>
    <string name="input_nama_nip">input nama / NIP</string>
    <string name="nip_nama">nip/nama</string>
    <string name="back">back</string>
    <string name="input">input</string>
    <string name="input_kode_gaji">input kode gaji</string>
    <string name="kode_gaji">kode gaji</string>
    <string name="input_keterangan">input keterangan</string>
    <string name="keterangan">keterangan</string>
    <string name="gaji">gaji</string>
    <string name="textview">TextView</string>
    <string name="kosong" />
    <string name="show">show</string>
</resources>
