<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckground1kpk"
    tools:context=".inputGaji">

    <EditText
        android:id="@+id/kodeL"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_kode_gaji"
        android:inputType="textPersonName"
        android:text="@string/kode_gaji"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nipnamapeg"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_keterangan"
        android:inputType="text"
        android:text="@string/keterangan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kodeL"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/nipnamapeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_nama_nip"
        android:inputType="textPersonName"
        android:text="@string/nip_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="80dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttoninput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="80dp"
        android:text="@string/input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>