<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckground1kpk"
    tools:context=".claimGaji">

    <TextView
        android:id="@+id/text"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/claim_gaji"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="68dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:onClick="claim"
        android:text="@string/claim"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="108dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:onClick="back"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/no_rek"
        android:layout_width="328dp"
        android:layout_height="86dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="253dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_no_rekening"
        android:inputType="textPersonName"
        android:text="@string/no_rekening"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        tools:targetApi="o" />


</android.support.constraint.ConstraintLayout>